allow for a bootstrap file that has pre-loaded settings
The file is to be provided. I should document this process soon(tm).

--- a/manifest.json
+++ b/manifest.json
@@ -31,7 +31,8 @@
 
     "background": {
         "scripts": [
-            "script/browser-polyfill.min.js", 
+            "script/browser-polyfill.min.js",
+            "script/bootstrap.js",
             "script/background.js"
         ]
     },
