--- a/manifest.json
+++ b/manifest.json
@@ -31,9 +31,12 @@
 
     "background": {
         "scripts": [
-            "script/browser-polyfill.min.js",
             "script/bootstrap.js",
-            "script/background.js"
+            "script/utils/utils.js",
+            "script/modules/rules.js",
+            "script/modules/settings.js",
+            "script/modules/tabs.js",
+            "script/main/background.js"
         ]
     },
 
